# rover

./: .env.example  .gitignore  .mcp.json.example  AGENTS.md  AGENTS.original.md  AGENTS_ROVER_BRIDGE_SNIPPET.md  CONTRIBUTING.md  CONTRIBUTION_FLOW.md  README.md  README_ROVER_AGENT_BRIDGE.md  RELEASE_NOTES_v0.1.1.md  ROADMAP.md  ROADMAP_v0.1.2.md  install_rover_agent_bridge.ps1  install_rover_agent_bridge.sh  main.py  newplan.md  pyproject.toml  requirements.txt  run.py  skill.md
.agents/: commands.yml  policy.yml
.agents/roles/: claude_architect.md  claude_reviewer.md  codex_builder.md
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
.rover/state/: pr_engine.sqlite3
app/: builder.py  contribute.py
docs/agents/: README.md  claude-code.md  codex.md  hermes.md  openclaw.md
docs/prd/: openclaw-run-status-and-gh-identity.md
docs/validation/: newplan-runtime-validation.md
scripts/: _write_service.sh  bootstrap.sh  install_autostart.sh  install_autostart_windows.ps1  install_vps.sh  install_windows.ps1  rover_agents.py  uninstall_vps.sh  uninstall_windows.ps1
src/: agent_models.py  cli_ui.py  command_router.py  config.py  contribution_engine.py  contribution_store.py  doctor.py  fork.py  pr_generator.py
src/analysis/: __init__.py  project_inspector.py  repo_intelligence.py
src/contrib/: __init__.py  contribution_engine.py  contribution_store.py  fix_planner.py  issue_analyzer.py  opportunity_engine.py  patch_generator.py  pr_engine.py  pr_generator.py  pr_writer.py  repo_scan.py  validator.py
src/contribution_mcp/: __init__.py  __main__.py  server.py
src/core/: __init__.py  agent_models.py  ai.py  cli_ui.py  command_router.py  config.py  doctor.py  github_auth.py  notify.py  pr_monitor.py  security.py  state.py  telegram_bot.py
src/daemon/: __main__.py  runner.py
src/github/: __init__.py  fork.py  repo_cloner.py  scraper.py
tests/: test_agent_models.py  test_agent_structure.py  test_command_router.py  test_config_root.py  test_contribution_mcp.py  test_fork.py  test_install_scripts.py  test_packaging.py  test_pr_decision_engine.py  test_pr_generator_hardening.py
(+29 files in other folders)
