[project]
name = "github-contribution-engine"
version = "0.1.0"
description = "Acceptance-first GitHub contribution engine with CLI and MCP entrypoints."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["mcp", "github", "pull-request", "automation", "agent", "contribution"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
  "mcp[cli]>=1.27.0",
]

[project.scripts]
github-contribution-engine = "app.builder:main"
contribution-mcp = "src.contribution_mcp.server:main"

[project.urls]
Homepage = "https://github.com/BigNounce90/github-contribution-engine"
Repository = "https://github.com/BigNounce90/github-contribution-engine"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "src"]
