[project]
name = "rover"
version = "0.1.0"
description = "Autonomous GitHub contribution agent — scans, patches, submits, and learns."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["mcp", "github", "pull-request", "automation", "agent", "contribution"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
  "mcp[cli]>=1.27.0",
]

[project.scripts]
rover = "app.contribute:main"
rover-engine = "app.builder:main"
rover-mcp = "src.contribution_mcp.server:main"

[project.urls]
Homepage = "https://github.com/BigNounce90/rover"
Repository = "https://github.com/BigNounce90/rover"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "src"]
